# AI-AGENT

./: README.md
.devcontainer/: devcontainer.json
trip_planner/: __init__.py  app.py  pyproject.toml  requirements.txt
trip_planner/src/: api_services.py  trip_agent.py  trip_agents.py  trip_crew.py  trip_tasks.py
