[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "trip-planner"
version = "0.1.0"
description = "AI Travel Planner using CrewAI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
crewai = {extras = ["tools"], version = "^0.186.1"}
streamlit = "^1.28.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pandas = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
trip-planner = "app:main"
